--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "css":"npx tailwindcss -i style.css -o ./src/tailw.css --watch",
+    "css": "npx tailwindcss -i style.css -o ./src/tailw.css --watch",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
+    "jquery": "^3.7.1",
+    "puppeteer": "^22.6.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.4.3"
