--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "jquery": "^3.7.1",
+    "cheerio": "^1.0.0-rc.12",
     "puppeteer": "^22.6.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
